--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@ local.properties
 node_modules/
 npm-debug.log
 yarn-error.log
+yarn.lock
 
 # BUCK
 buck-out/
@@ -60,4 +61,7 @@ buck-out/
 .tern-project
 .tern-port
 .jshintrc
+.eslintrc
 tags
+tags.temp
+tags.lock
