--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'kickstart_react_native' do
 
   pod 'react-native-appearance', :path => '../node_modules/react-native-appearance'
 
+  pod 'RNSVG', :path => '../node_modules/react-native-svg'
+
   target 'kickstart_react_nativeTests' do
     inherit! :complete
     # Pods for testing
