--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-iphone-x-helper": "^1.2.1",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.7",
-    "react-native-screens": "^2.10.1"
+    "react-native-screens": "^2.10.1",
+    "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
